<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home2">

    <fragment
        android:id="@+id/navigation_home2"
        android:name="com.devrakan.rshop.ui.Fragment.Maneger.HomeFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard2"
        android:name="com.devrakan.rshop.ui.Fragment.Maneger.DashboardFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications2"
        android:name="com.devrakan.rshop.ui.Fragment.Maneger.NotificationsFragment"
        android:label="@string/title_shops"
        tools:layout="@layout/fragment_notifications" />
</navigation>